# test_task_yesoriginal

./: .env.example  .gitignore  pyproject.toml  readme.md  test.xlsx
core/: api.py  config.py  entrypoint.py  excel.py  main.py  utils.py
